# auctionApp

./: CMakeLists.txt  CMakeLists.txt.user.6c80701  addappraisalform.cpp  addappraisalform.h  addappraisalform.ui  addlotdialog.cpp  addlotdialog.h  addlotdialog.ui  admin.cpp  admin.h  auction.cpp  auction.h  auctionquery.cpp  auctionquery.h  auctiontablemodel.cpp  auctiontablemodel.h  databasemanager.cpp  databasemanager.h  expert.cpp  expert.h  expertform.cpp  expertform.h  expertform.ui  form.cpp  form.h  form.ui  loginquery.cpp  loginquery.h  lot.cpp  lot.h  lotquery.cpp  lotquery.h  lottablemodel.cpp  lottablemodel.h  main.cpp  participator.cpp  participator.h  participatorform.cpp  participatorform.h  participatorform.ui  (+21 more)
